--- a/A-bib.bib
+++ b/A-bib.bib
@@ -41,6 +41,27 @@
 % Missing required field 'author'
 % Missing required field 'editor'
 
+@article{abbiss2010,
+  title = {Examining Pacing Profiles in Elite Female Road Cyclists Using Exposure Variation Analysis},
+  author = {Abbiss, C. R. and Straker, L. and Quod, M. J. and Martin, D. T. and Laursen, P. B.},
+  date = {2010-05},
+  journaltitle = {British Journal of Sports Medicine},
+  shortjournal = {Br J Sports Med},
+  volume = {44},
+  number = {6},
+  eprint = {18523040},
+  eprinttype = {pmid},
+  pages = {437--442},
+  issn = {1473-0480},
+  doi = {10.1136/bjsm.2008.047787},
+  abstract = {OBJECTIVE: In this study, the amplitude and time distribution of power output in a variety of competitive cycling events through the use of a new mathematical analysis was examined: exposure variation analysis (EVA). DESIGN: Descriptive field study. SETTING: Various professional road cycling events, including; a 5-day-eight-stage tour race, a 1-day World Cup event and the Australian National Individual Time Trial Championships. PARTICIPANTS: 9 elite female cyclists (mean (SD), mass = 57.8 (3.4) kg, height = 167.3 (2.8) cm, Vo(2)peak = 63.2 (5.2) ml kg(-1) min(-1)). INTERVENTIONS: None. MAIN OUTCOME MEASUREMENTS: The variation in power output and the quantification of the total time and acute time spent at various exercise intensities during competitive professional cycling were examined. Predefined levels of exercise intensity that elicited first ventilation threshold, second ventilation threshold and maximal aerobic power were determined from a graded exercise test performed before the events and compared with power output during each event. RESULTS: EVA exposed that power output during the time trial was highly variable (EVA(SD) = 2.81 (0.33)) but more evenly distributed than the circuit/criterium (4.23 (0.31)) and road race events (4.81 (0.96)). CONCLUSION: EVA may be useful for illustrating variations in the amplitude and time distribution of power output during cycling events. The specific race format influenced not only the overall time spent in various power bands, but also the acute time spent at these exercise intensities.},
+  langid = {english},
+  keywords = {Analysis of Variance,Athletic Performance,Bicycling,Energy Metabolism,Exercise,Female,Humans,Oxygen Consumption,Physical Endurance},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\QICV3TB7\\Abbiss et al. - 2010 - Examining pacing profiles in elite female road cyc.pdf}
+}
+% == BibLateX quality report for abbiss2010:
+% ? unused Library catalog ("PubMed")
+
 @book{allen2010,
   title = {Training and Racing with a Power Meter},
   author = {Allen, Hunter and Coggan, Andrew},
@@ -327,6 +348,26 @@
 }
 % == BibLateX quality report for ebert2005:
 % ? unused Library catalog ("Springer Link")
+
+@article{ebert2006,
+  title = {Power Output during a Professional Men's Road-Cycling Tour},
+  author = {Ebert, Tammie R. and Martin, David T. and Stephens, Brian and Withers, Robert T.},
+  date = {2006-12},
+  journaltitle = {International Journal of Sports Physiology and Performance},
+  shortjournal = {Int J Sports Physiol Perform},
+  volume = {1},
+  number = {4},
+  eprint = {19124890},
+  eprinttype = {pmid},
+  pages = {324--335},
+  issn = {1555-0265},
+  doi = {10.1123/ijspp.1.4.324},
+  abstract = {PURPOSE: To quantify the power-output demands of men's road-cycling stage racing using a direct measure of power output. METHODS: Power-output data were collected from 207 races over 6 competition years on 31 Australian national male road cyclists. Subjects performed a maximal graded exercise test in the laboratory to determine maximum aerobic-power output, and bicycles were fitted with SRM power meters. Races were described as flat, hilly, or criterium, and linear mixed modeling was used to compare the races. RESULTS: Criterium was the shortest race and displayed the highest mean power output (criterium 262 +/- 30 v hilly 203 +/- 32 v flat 188 +/- 30 W), percentage total race time above 7.5 W/kg (criterium 15.5\% +/- 4.1\% v hilly 3.8\% +/- 1.7\% v flat 3.5\% +/- 1.4\%) and SD in power output (criterium 250 v hilly 165 v flat 169 W). Approximately 67\%, 80\%, and 85\% of total race time was spent below 5 W/kg for criterium, hilly and flat races, respectively. About 70, 40, and 20 sprints above maximum aerobic-power output occurred during criterium, hilly, and flat races, respectively, with most sprints being 6 to 10 s. CONCLUSIONS: These data extend previous research documenting the demands of men's road cycling. Despite the relatively low mean power output, races were characterized by multiple high-intensity surges above maximum aerobic-power output. These data can be used to develop sport-specific interval-training programs that replicate the demands of competition.},
+  langid = {english},
+  keywords = {Bicycling,Exercise Test,Humans,Male,Muscle Contraction,Muscle Strength,Muscle; Skeletal,Oxygen Consumption,Physical Endurance,Task Performance and Analysis,Time Factors,Young Adult}
+}
+% == BibLateX quality report for ebert2006:
+% ? unused Library catalog ("PubMed")
 
 @online{engineeringtoolbox2004,
   title = {Drag {{Coefficient}}},
@@ -659,6 +700,29 @@ dynamic calibration,measurement error,reliability,validity},
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("PubMed")
 
+@article{metcalfe2017,
+  title = {Within-{{Season Distribution}} of {{External Training}} and {{Racing Workload}} in {{Professional Male Road Cyclists}}},
+  author = {Metcalfe, Alan J. and Menasp\`a, Paolo and Villerius, Vincent and Quod, Marc and Peiffer, Jeremiah J. and Govus, Andrew D. and Abbiss, Chris R.},
+  date = {2017-04-01},
+  journaltitle = {International Journal of Sports Physiology and Performance},
+  volume = {12},
+  number = {s2},
+  pages = {S2-146},
+  publisher = {{Human Kinetics, Inc.}},
+  issn = {1555-0273, 1555-0265},
+  doi = {10.1123/ijspp.2016-0396},
+  url = {https://journals.humankinetics.com/view/journals/ijspp/12/s2/article-pS2-142.xml},
+  urldate = {2022-02-20},
+  abstract = {Purpose: To describe the within-season external workloads of professional male road cyclists for optimal training prescription. Methods: Training and racing of 4 international competitive professional male cyclists (age 24 {$\pm$} 2 y, body mass 77.6 {$\pm$} 1.5 kg) were monitored for 12 mo before the world team-time-trial championships. Three within-season phases leading up to the team-time-trial world championships on September 20, 2015, were defined as phase 1 (Oct\textendash Jan), phase 2 (Feb\textendash May), and phase 3 (June\textendash Sept). Distance and time were compared between training and racing days and over each of the various phases. Times spent in absolute ({$<$}100, 100\textendash 300, 400\textendash 500, {$>$}500 W) and relative (0\textendash 1.9, 2.0\textendash 4.9, 5.0\textendash 7.9, {$>$}8 W/kg) power zones were also compared for the whole season and between phases 1\textendash 3. Results: Total distance (3859 {$\pm$} 959 vs 10911 {$\pm$} 620 km) and time (240.5 {$\pm$} 37.5 vs 337.5 {$\pm$} 26 h) were lower (P {$<$} .01) in phase 1 than phase 2. Total distance decreased (P {$<$} .01) from phase 2 to phase 3 (10911 {$\pm$} 620 vs 8411 {$\pm$} 1399 km, respectively). Mean absolute (236 {$\pm$} 12.1 vs 197 {$\pm$} 3 W) and relative (3.1 {$\pm$} 0 vs 2.5 {$\pm$} 0 W/kg) power output were higher (P {$<$} .05) during racing than training, respectively. Conclusion: Volume and intensity differed between training and racing over each of 3 distinct within-season phases.},
+  langid = {american},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\3YFUR9MY\\Metcalfe et al. - 2017 - Within-Season Distribution of External Training an.pdf;C\:\\Users\\madie\\Zotero\\storage\\788Y65D9\\article-pS2-142.html}
+}
+% == BibLateX quality report for metcalfe2017:
+% Unexpected field 'publisher'
+% 'issn': not a valid ISSN
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("journals.humankinetics.com")
+
 @article{monod1965,
   title = {The {{Work Capacity}} of a {{Synergic Muscular Group}}},
   author = {MONOD, H. and SCHERRER, J.},
@@ -844,6 +908,46 @@ dynamic calibration,measurement error,reliability,validity},
   url = {https://www.procyclingstats.com/race/tour-de-france/2021/startlist/general-peloton-averages},
   urldate = {2022-02-20}
 }
+
+@article{puchowicz2020,
+  title = {Development and Field Validation of an Omni-Domain Power-Duration Model},
+  author = {Puchowicz, Michael J. and Baker, Jonathan and Clarke, David C.},
+  date = {2020-04},
+  journaltitle = {Journal of Sports Sciences},
+  shortjournal = {J Sports Sci},
+  volume = {38},
+  number = {7},
+  eprint = {32131692},
+  eprinttype = {pmid},
+  pages = {801--813},
+  issn = {1466-447X},
+  doi = {10.1080/02640414.2020.1735609},
+  abstract = {Purpose: To validate and compare a novel model based on the critical power (CP) concept that describes the entire domain of maximal mean power (MMP) data from cyclists.Methods: An omni-domain power-duration (OmPD) model was derived whereby the rate of W' expenditure is bound by maximum sprint power and the power at prolonged durations declines from CP log-linearly. The three-parameter CP (3CP) and exponential (Exp) models were likewise extended with the log-linear decay function (Om3CP and OmExp). Each model bounds W' using a different nonconstant function, W'eff (effective W'). Models were fit to MMP data from nine cyclists who also completed four time-trials (TTs).Results: The OmPD and Om3CP residuals (4~{$\pm~$}1\%) were smaller than the OmExp residuals (6~{$\pm~$}2\%; P {$<~$}0.001). W'eff predicted by the OmPD model was stable between 120-1,800~s, whereas it varied for the Om3CP and OmExp models. TT prediction errors were not different between models (7~{$\pm~$}5\%, 8~{$\pm~$}5\%, 7~{$\pm~$}6\%; P =~0.914).Conclusion: The OmPD offers similar or superior goodness-of-fit and better theoretical properties compared to the other models, such that it best extends the CP concept to short-sprint and prolonged-endurance performance.},
+  langid = {english},
+  keywords = {Adult,anaerobic threshold,Athletic performance,Bicycling,Competitive Behavior,critical power model,cycling,Exercise Test,Female,Humans,Male,mathematical modelling,maximal mean power data,Models; Statistical,Physical Endurance,power-duration profile,wʹ}
+}
+% == BibLateX quality report for puchowicz2020:
+% ? unused Library catalog ("PubMed")
+
+@article{quod2010,
+  title = {The Power Profile Predicts Road Cycling {{MMP}}},
+  author = {Quod, M. J. and Martin, D. T. and Martin, J. C. and Laursen, P. B.},
+  date = {2010-06},
+  journaltitle = {International Journal of Sports Medicine},
+  shortjournal = {Int J Sports Med},
+  volume = {31},
+  number = {6},
+  eprint = {20301046},
+  eprinttype = {pmid},
+  pages = {397--401},
+  issn = {1439-3964},
+  doi = {10.1055/s-0030-1247528},
+  abstract = {Laboratory tests of fitness variables have previously been shown to be valid predictors of cycling time-trial performance. However, due to the influence of drafting, tactics and the variability of power output in mass-start road races, comparisons between laboratory tests and competition performance are limited. The purpose of this study was to compare the power produced in the laboratory Power Profile (PP) test and Maximum Mean Power (MMP) analysis of competition data. Ten male cyclists (mean+/-SD: 20.8+/-1.5 y, 67.3+/-5.5 kg, V O (2 max) 72.7+/-5.1 mL x kg (-1) x min (-1)) completed a PP test within 14 days of competing in a series of road races. No differences were found between PP results and MMP analysis of competition data for durations of 60-600 s, total work or estimates of critical power and the fixed amount of work that can be completed above critical power (W'). Self-selected cadence was 15+/-7 rpm higher in the lab. These results indicate that the PP test is an ecologically valid assessment of power producing capacity over cycling specific durations. In combination with MMP analysis, this may be a useful tool for quantifying elements of cycling specific performance in competitive cyclists.},
+  langid = {english},
+  keywords = {Athletic Performance,Bicycling,Exercise Test,Humans,Male,Muscle Contraction,Muscle Strength,Oxygen Consumption,Physical Endurance,Young Adult}
+}
+% == BibLateX quality report for quod2010:
+% ? unused Library catalog ("PubMed")
 
 @inproceedings{romcke2019,
   title = {Simulation {{Model}} for {{Road Cycling Time Trials}} with a {{Non-constant Drag Area}}:},
