--- a/A-bib.bib
+++ b/A-bib.bib
@@ -329,6 +329,29 @@
 % == BibLateX quality report for delucas2013a:
 % ? unused Library catalog ("DOI.org (Crossref)")
 
+@article{driss2013,
+  title = {The Measurement of Maximal (Anaerobic) Power Output on a Cycle Ergometer: A Critical Review},
+  shorttitle = {The Measurement of Maximal (Anaerobic) Power Output on a Cycle Ergometer},
+  author = {Driss, Tarak and Vandewalle, Henry},
+  date = {2013},
+  journaltitle = {BioMed Research International},
+  shortjournal = {Biomed Res Int},
+  volume = {2013},
+  eprint = {24073413},
+  eprinttype = {pmid},
+  pages = {589361},
+  issn = {2314-6141},
+  doi = {10.1155/2013/589361},
+  abstract = {The interests and limits of the different methods and protocols of maximal (anaerobic) power (Pmax) assessment are reviewed: single all-out tests versus force-velocity tests, isokinetic ergometers versus friction-loaded ergometers, measure of Pmax during the acceleration phase or at peak velocity. The effects of training, athletic practice, diet and pharmacological substances upon the production of maximal mechanical power are not discussed in this review mainly focused on the technical (ergometer, crank length, toe clips), methodological (protocols) and biological factors (muscle volume, muscle fiber type, age, gender, growth, temperature, chronobiology and fatigue) limiting Pmax in cycling. Although the validity of the Wingate test is questionable, a large part of the review is dedicated to this test which is currently the all-out cycling test the most often used. The biomechanical characteristics specific of maximal and high speed cycling, the bioenergetics of the all-out cycling exercises and the influence of biochemical factors (acidosis and alkalosis, phosphate ions\ldots ) are recalled at the beginning of the paper. The basic knowledge concerning the consequences of the force-velocity relationship upon power output, the biomechanics of sub-maximal cycling exercises and the study on the force-velocity relationship in cycling by Dickinson in 1928 are presented in Appendices.},
+  langid = {english},
+  pmcid = {PMC3773392},
+  keywords = {Anaerobiosis,Biomechanical Phenomena,Energy Metabolism,Exercise,Exercise Test,Humans,Torque},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\I7YCP2ZD\\driss_2013_.pdf}
+}
+% == BibLateX quality report for driss2013:
+% Unexpected field 'pmcid'
+% ? unused Library catalog ("PubMed")
+
 @article{ebert2005,
   title = {Power Output during Women's {{World Cup}} Road Cycle Racing},
   author = {Ebert, Tammie R. and Martin, David T. and McDonald, Warren and Victor, James and Plummer, John and Withers, Robert T.},
@@ -495,6 +518,29 @@
 % Unexpected field 'publisher'
 % ? unused Call number ("00005768-202005000-00005")
 % ? unused Library catalog ("Journals@Ovid")
+
+@article{hughmorton1996,
+  title = {A 3-Parameter Critical Power Model},
+  author = {HUGH MORTON, R.},
+  date = {1996-03-01},
+  journaltitle = {Ergonomics},
+  volume = {39},
+  number = {4},
+  eprint = {8854981},
+  eprinttype = {pmid},
+  pages = {611--619},
+  publisher = {{Taylor \& Francis}},
+  issn = {0014-0139},
+  doi = {10.1080/00140139608964484},
+  url = {https://doi.org/10.1080/00140139608964484},
+  urldate = {2022-02-20},
+  abstract = {The critical power test is a well-established procedure that provides estimates of two important parameters characterizing work performance; anaerobic work capacity (AWC) and critical power (CP). The concept proscribes a hyperbolic relationship between power output (P) and time to exhaustion (t), given by (P - CP)t = AWC. Since evidence now exists that the procedure overestimates CP and underestimates AWC, this study was undertaken to investigate the effect of relaxing the requirement that the time asymptote necessarily be at zero. Using data from a previous study, it is shown that in so doing, (1) a time asymptote significantly less than zero is obtained, (2) significantly smaller estimates of CP and larger estimates of AWC are obtained, (3) a third parameter is introduced that theoretically represents maximal instantaneous power, (4) it implies that the maximal power that could be developed at any instant is proportional to the amount of AWC remaining at that instant, which in turn implies that (5) at exhaustion not necessary all of AWC is consumed.},
+  keywords = {Anaerobic work capacity,Cycle ergometry,Endurance,Exhaustion,Hyperbolic model},
+  annotation = {\_eprint: https://doi.org/10.1080/00140139608964484}
+}
+% == BibLateX quality report for hughmorton1996:
+% Unexpected field 'publisher'
+% ? unused Library catalog ("Taylor and Francis+NEJM")
 
 @article{johnson2007,
   title = {Inspiratory Muscle Training Improves Cycling Time-Trial Performance and Anaerobic Work Capacity but Not Critical Power},
@@ -745,6 +791,28 @@ dynamic calibration,measurement error,reliability,validity},
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("Taylor and Francis+NEJM")
 
+@article{monod1965a,
+  title = {The {{Work Capacity}} of a {{Synergic Muscular Group}}},
+  author = {MONOD, H. and SCHERRER, J.},
+  date = {1965-07-01},
+  journaltitle = {Ergonomics},
+  volume = {8},
+  number = {3},
+  pages = {329--338},
+  publisher = {{Taylor \& Francis}},
+  issn = {0014-0139},
+  doi = {10.1080/00140136508930810},
+  url = {https://doi.org/10.1080/00140136508930810},
+  urldate = {2022-02-20},
+  abstract = {A new conception of dynamic or static muscular work tests is presented. The authors define the critical power of a muscular work from the notions of maximum work and maximum time of work. The work capacity is then considered in the case of dynamic work, and of continuous or intermittent static work. From the data presented it is possible to define the maximum amount of work that can be performed in a given time as well as the conditions of work performed without fatigue},
+  annotation = {\_eprint: https://doi.org/10.1080/00140136508930810},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\7JV2NPGY\\00140136508930810.html}
+}
+% == BibLateX quality report for monod1965a:
+% Unexpected field 'publisher'
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("Taylor and Francis+NEJM")
+
 @article{moritani1981,
   title = {Critical Power as a Measure of Physical Work Capacity and Anaerobic Threshold},
   author = {Moritani, T. and Nagata, A. and {deVries}, H. A. and Muro, M.},
@@ -763,6 +831,26 @@ dynamic calibration,measurement error,reliability,validity},
   file = {C\:\\Users\\madie\\Zotero\\storage\\U9RZMSUW\\moritani_1981_.pdf}
 }
 % == BibLateX quality report for moritani1981:
+% ? unused Library catalog ("PubMed")
+
+@article{morton1996,
+  title = {A 3-Parameter Critical Power Model},
+  author = {Morton, R. H.},
+  date = {1996-04},
+  journaltitle = {Ergonomics},
+  shortjournal = {Ergonomics},
+  volume = {39},
+  number = {4},
+  eprint = {8854981},
+  eprinttype = {pmid},
+  pages = {611--619},
+  issn = {0014-0139},
+  doi = {10.1080/00140139608964484},
+  abstract = {The critical power test is a well-established procedure that provides estimates of two important parameters characterizing work performance; anaerobic work capacity (AWC) and critical power (CP). The concept proscribes a hyperbolic relationship between power output (P) and time to exhaustion (t), given by (P - CP)t = AWC. Since evidence now exists that the procedure overestimates CP and underestimates AWC, this study was undertaken to investigate the effect of relaxing the requirement that the time asymptote necessarily be at zero. Using data from a previous study, it is shown that in so doing, (1) a time asymptote significantly less than zero is obtained, (2) significantly smaller estimates of CP and larger estimates of AWC are obtained, (3) a third parameter is introduced that theoretically represents maximal instantaneous power, (4) it implies that the maximal power that could be developed at any instant is proportional to the amount of AWC remaining at that instant, which in turn implies that (5) at exhaustion not necessary all of AWC is consumed.},
+  langid = {english},
+  keywords = {Bias,Exercise Test,Humans,Models; Biological,Physical Endurance,Task Performance and Analysis,Time Factors}
+}
+% == BibLateX quality report for morton1996:
 % ? unused Library catalog ("PubMed")
 
 @article{morton2004,
@@ -804,6 +892,27 @@ dynamic calibration,measurement error,reliability,validity},
 }
 % == BibLateX quality report for morton2006:
 % ? unused Library catalog ("Springer Link")
+
+@article{peronnet1989,
+  title = {Mathematical Analysis of Running Performance and World Running Records},
+  author = {P\'eronnet, F. and Thibault, G.},
+  date = {1989-07},
+  journaltitle = {Journal of Applied Physiology (Bethesda, Md.: 1985)},
+  shortjournal = {J Appl Physiol (1985)},
+  volume = {67},
+  number = {1},
+  eprint = {2759974},
+  eprinttype = {pmid},
+  pages = {453--465},
+  issn = {8750-7587},
+  doi = {10.1152/jappl.1989.67.1.453},
+  abstract = {The objective of this study was to develop an empirical model relating human running performance to some characteristics of metabolic energy-yielding processes using A, the capacity of anaerobic metabolism (J/kg); MAP, the maximal aerobic power (W/kg); and E, the reduction in peak aerobic power with the natural logarithm of race duration T, when T greater than TMAP = 420 s. Accordingly, the model developed describes the average power output PT (W/kg) sustained over any T as PT = [S/T(1 - e-T/k2)] + 1/T integral of T O [BMR + B(1 - e-t/k1)]dt where S = A and B = MAP - BMR (basal metabolic rate) when T less than TMAP; and S = A + [Af ln(T/TMAP)] and B = (MAP - BMR) + [E ln(T/TMAP)] when T greater than TMAP; k1 = 30 s and k2 = 20 s are time constants describing the kinetics of aerobic and anaerobic metabolism, respectively, at the beginning of exercise; f is a constant describing the reduction in the amount of energy provided from anaerobic metabolism with increasing T; and t is the time from the onset of the race. This model accurately estimates actual power outputs sustained over a wide range of events, e.g., average absolute error between actual and estimated T for men's 1987 world records from 60 m to the marathon = 0.73\%. In addition, satisfactory estimations of the metabolic characteristics of world-class male runners were made as follows: A = 1,658 J/kg; MAP = 83.5 ml O2.kg-1.min-1; 83.5\% MAP sustained over the marathon distance. Application of the model to analysis of the evolution of A, MAP, and E, and of the progression of men's and women's world records over the years, is presented.},
+  langid = {english},
+  keywords = {Female,Humans,Male,Mathematics,Models; Biological,Physical Endurance,Running}
+}
+% == BibLateX quality report for peronnet1989:
+% ? Possibly abbreviated journal title Journal of Applied Physiology (Bethesda, Md.: 1985)
+% ? unused Library catalog ("PubMed")
 
 @article{pinot2010,
   title = {The `{{Power Profile}}' for Determining the Physical Capacities of a Cyclist},
