--- a/A-bib.bib
+++ b/A-bib.bib
@@ -142,6 +142,29 @@
 % Unexpected field 'publisher'
 % ? unused Library catalog ("journals.physiology.org (Atypon)")
 
+@article{borszcz2018,
+  title = {Functional {{Threshold Power}} in {{Cyclists}}: {{Validity}} of the {{Concept}} and {{Physiological Responses}}},
+  shorttitle = {Functional {{Threshold Power}} in {{Cyclists}}},
+  author = {Borszcz, Fernando Klitzke and Tramontin, Artur Ferreira and Bossi, Arthur Henrique and Carminatti, Lorival Jos\'e and Costa, Vitor Pereira},
+  date = {2018-10},
+  journaltitle = {International Journal of Sports Medicine},
+  shortjournal = {Int J Sports Med},
+  volume = {39},
+  number = {10},
+  eprint = {29801189},
+  eprinttype = {pmid},
+  pages = {737--742},
+  issn = {1439-3964},
+  doi = {10.1055/s-0044-101546},
+  abstract = {Functional threshold power is defined as the highest power output a cyclist can maintain in a quasi-steady state for approximately 60\,min (FTP60). In order to improve practicality for regular evaluations, FTP60 could theoretically be determined as 95\% of the mean power output in a 20-min time trial (FTP20). This study tested this assumption and the validity of FTP20 and FTP60 against the individual anaerobic threshold (IAT). Twenty-three trained male cyclists performed an incremental test to exhaustion, 20- and 60-min time trials, and a time to exhaustion at FTP20. Power output, heart rate and oxygen uptake representing FTP20, FTP60 and IAT were not different (p{$>$}0.05), and large to very large correlations were found (r=0.61 to 0.88). Bland-Altman plots between FTP20, FTP60 and IAT showed small bias (-1 to -5\,W), but large limits of agreement ([-40 to 32\,W] to [-62 to 60\,W]). Time to exhaustion at FTP20 was 50.9{$\pm$}15.7\,min. In conclusion, FTP20 and FTP60 should not be used interchangeably on an individual basis and their validity against IAT should be interpreted with caution.},
+  langid = {english},
+  keywords = {Adult,Anaerobic Threshold,Bicycling,Exercise Test,Heart Rate,Humans,Lactic Acid,Male,Oxygen Consumption,Perception,Physical Endurance,Physical Exertion,Reproducibility of Results,Time Factors},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\CA3YPBEG\\Borszcz et al. - 2018 - Functional Threshold Power in Cyclists Validity o.pdf}
+}
+% == BibLateX quality report for borszcz2018:
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("PubMed")
+
 @online{buhrmann2020,
   title = {Creating a {{Strava}} Style Power Curve from Cycling Data Using Python},
   author = {Buhrmann, Hannes},
@@ -813,6 +836,28 @@ dynamic calibration,measurement error,reliability,validity},
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("Taylor and Francis+NEJM")
 
+@article{morgan2019,
+  title = {Road Cycle {{TT}} Performance: {{Relationship}} to the Power-Duration Model and Association with {{FTP}}},
+  shorttitle = {Road Cycle {{TT}} Performance},
+  author = {Morgan, Paul T. and Black, Matthew I. and Bailey, Stephen J. and Jones, Andrew M. and Vanhatalo, Anni},
+  date = {2019-04},
+  journaltitle = {Journal of Sports Sciences},
+  shortjournal = {J Sports Sci},
+  volume = {37},
+  number = {8},
+  eprint = {30387374},
+  eprinttype = {pmid},
+  pages = {902--910},
+  issn = {1466-447X},
+  doi = {10.1080/02640414.2018.1535772},
+  abstract = {PURPOSE: To determine the accuracy of critical power (CP) and W' (the curvature constant of the power-duration relationship) derived from self-paced time-trial (TT) prediction trials using mobile power meters to predict 16.1-km road cycling TT performance. This study also aimed to assess the agreement between functional threshold power (FTP) and CP. METHODS: Twelve competitive male cyclists completed an incremental test to exhaustion, a FTP test and 4-5 self-paced TT bouts on a stationary bike within the lab, and a 16.1 km road TT, using mobile power meters. RESULTS: CP and W' derived from the power-duration relationship closely predicted TT performance. The 16.1-km road TT completion time (26.7~{$\pm~$}2.2~min) was not significantly different from and was significantly correlated with the predicted time-to-completion (27.5~{$\pm~$}3.3~min, r~=~0.89, P~{$<~$}0.01). CP and FTP were not significantly different (275~{$\pm~$}40~W vs. 278~{$\pm~$}42~W, P~{$>~$}0.05); however, the limits of agreement between CP and FTP were 30 to -36~W. DISCUSSION: The findings of this study indicate that CP and W' determined using mobile power meters during maximal, self-paced TT prediction trials can be used to accurately predict 16.1-km cycling performance, supporting the application of the CP and W' for performance prediction. However, the limits of agreement were too large to consider FTP and CP interchangeable.},
+  langid = {english},
+  keywords = {Adult,Athletic Performance,Bicycling,Critical power,Exercise Test,functional threshold power,Humans,Male,Oxygen Consumption,power meter,power-duration relationship,Pulmonary Gas Exchange,Sports Equipment,Time Factors,time-trial},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\6UE3UW8Q\\Morgan et al. - 2019 - Road cycle TT performance Relationship to the pow.pdf}
+}
+% == BibLateX quality report for morgan2019:
+% ? unused Library catalog ("PubMed")
+
 @article{moritani1981,
   title = {Critical Power as a Measure of Physical Work Capacity and Anaerobic Threshold},
   author = {Moritani, T. and Nagata, A. and {deVries}, H. A. and Muro, M.},
@@ -1213,6 +1258,28 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for unioncyclisteinternationale:
 % Exactly one of 'date' / 'year' must be present
 % ? Title looks like it was stored in title-case in Zotero
+
+@article{valenzuela2018,
+  title = {Is the {{Functional Threshold Power}} a {{Valid Surrogate}} of the {{Lactate Threshold}}?},
+  author = {Valenzuela, Pedro L. and Morales, Javier S. and Foster, Carl and Lucia, Alejandro and de la Villa, Pedro},
+  date = {2018-11-01},
+  journaltitle = {International Journal of Sports Physiology and Performance},
+  volume = {13},
+  number = {10},
+  pages = {1293--1298},
+  publisher = {{Human Kinetics}},
+  issn = {1555-0273, 1555-0265},
+  doi = {10.1123/ijspp.2018-0008},
+  url = {https://journals.humankinetics.com/view/journals/ijspp/13/10/article-p1293.xml},
+  urldate = {2022-02-20},
+  abstract = {Purpose: To analyze the relationship between functional threshold power (FTP) and the lactate threshold (LT). Methods: A total of 20 male cyclists performed an incremental test in which LT was determined. At least 48 h later, they performed a 20-min time trial, and 95\% of the mean power output was defined as FTP. Participants were divided into recreational (peak power output\,{$<$}\,4.5 W{$\cdot$}kg-1; n\,=\,11) or trained cyclists (peak power output\,{$>$}\,4.5 W{$\cdot$}kg-1; n\,=\,9) according to their fitness status. Results: The FTP (240 [35] W) was overall not significantly different (effect size\,=\,0.20; limits of agreement\,=\,-2.4\% [11.5\%]) from the LT (246 [24] W), and both markers were strongly correlated (r\,=\,.95; P\,{$<$}\,.0001). Accounting for the participants' fitness status, no significant differences were found between FTP and LT (effect size\,=\,0.22; limits of agreement\,=2.1\% [7.8\%]) in trained cyclists, but FTP was significantly lower than the LT (P\,=\,.0004, effect size\,=\,0.81; limits of agreement\,=-6.5\% [8.3\%]) in recreational cyclists. A significant relationship was found between relative peak power output and the bias between FTP and the LT markers (r\,=\,.77; P\,{$<$}\,.0001). Conclusions: FTP is a valid field test-based marker for the assessment of endurance fitness. However, caution should be taken when using FTP interchangeably with LT, as the bias between markers seems to depend on the athlete's fitness status. Whereas FTP provides a good estimate of LT in trained cyclists, in recreational cyclists, it may underestimate LT.},
+  langid = {american}
+}
+% == BibLateX quality report for valenzuela2018:
+% Unexpected field 'publisher'
+% 'issn': not a valid ISSN
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("journals.humankinetics.com")
 
 @article{vanerp2020,
   title = {Case {{Report}}: {{Load}}, {{Intensity}}, and {{Performance Characteristics}} in {{Multiple Grand Tours}}},
