--- a/A-bib.bib
+++ b/A-bib.bib
@@ -26,6 +26,17 @@
 % == BibLateX quality report for 2019a:
 % ? Title looks like it was stored in title-case in Zotero
 
+@online{2019b,
+  title = {The {{Friction Coefficient}}, Definition, Equation, Table, {{Coefficient}} of {{Friction}}},
+  date = {2019-10-13T17:27:28+00:00},
+  url = {https://physicsteacher.in/2019/10/13/friction-coefficient/},
+  urldate = {2022-02-21},
+  abstract = {The Friction coefficient, definition, formula,static friction, kinetic friction, Coefficient of Friction, table different materials, wood,steel,rubber,ice},
+  langid = {american},
+  organization = {{PhysicsTeacher.in}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\2LCEPW8J\\friction-coefficient.html}
+}
+
 @inreference{2021,
   title = {Density of Air},
   booktitle = {Wikipedia},
@@ -1063,6 +1074,18 @@ dynamic calibration,measurement error,reliability,validity},
   urldate = {2022-02-20}
 }
 
+@online{published2021,
+  title = {Road {{World Championships}} 2021: {{Strava}} Data Shows Brutality of Race around {{Flanders}}},
+  shorttitle = {Road {{World Championships}} 2021},
+  author = {{published}, Tim Bonville-Ginn},
+  date = {2021-09-27T13:44:47Z},
+  url = {https://www.cyclingweekly.com/news/road-world-championships-2021-strava-data-shows-brutality-of-race-around-flanders},
+  urldate = {2022-02-21},
+  abstract = {Remco Evenepoel, Michael Valgren, Dylan van Baarle and more posted their rides to the site},
+  langid = {english},
+  organization = {{cyclingweekly.com}}
+}
+
 @article{puchowicz2020,
   title = {Development and Field Validation of an Omni-Domain Power-Duration Model},
   author = {Puchowicz, Michael J. and Baker, Jonathan and Clarke, David C.},
@@ -1541,6 +1564,26 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for zotero-1283:
 % Exactly one of 'date' / 'year' must be present
 % ? Title looks like it was stored in title-case in Zotero
+
+@online{zotero-1325,
+  title = {World {{Championship}} 🇧🇪🌈 | {{Ride}} | {{Strava}}},
+  url = {https://www.strava.com/activities/6023658076/overview},
+  urldate = {2022-02-20},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\8HXZQ78E\\overview.html}
+}
+% == BibLateX quality report for zotero-1325:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
+
+@online{zotero-1330,
+  title = {Precipitation - {{Is}} There a Way to Approximate the Density of Air during Rain?},
+  url = {https://earthscience.stackexchange.com/questions/16921/is-there-a-way-to-approximate-the-density-of-air-during-rain},
+  urldate = {2022-02-21},
+  organization = {{Earth Science Stack Exchange}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\MKRIDC3H\\is-there-a-way-to-approximate-the-density-of-air-during-rain.html}
+}
+% == BibLateX quality report for zotero-1330:
+% Exactly one of 'date' / 'year' must be present
 
 
 % Required packages:
