--- a/A-bib.bib
+++ b/A-bib.bib
@@ -805,7 +805,7 @@ dynamic calibration,measurement error,reliability,validity},
 
 @article{monod1965,
   title = {The {{Work Capacity}} of a {{Synergic Muscular Group}}},
-  author = {MONOD, H. and SCHERRER, J.},
+  author = {Monod, H. and Scherrer, J.},
   date = {1965-07-01},
   journaltitle = {Ergonomics},
   volume = {8},
@@ -827,7 +827,7 @@ dynamic calibration,measurement error,reliability,validity},
 
 @article{monod1965a,
   title = {The {{Work Capacity}} of a {{Synergic Muscular Group}}},
-  author = {MONOD, H. and SCHERRER, J.},
+  author = {Monod, H. and SCHERRER, J.},
   date = {1965-07-01},
   journaltitle = {Ergonomics},
   volume = {8},
