--- a/A-bib.bib
+++ b/A-bib.bib
@@ -1271,6 +1271,21 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for sreedhara2019:
 % ? unused Library catalog ("BioMed Central")
 
+@online{theeditorsofencyclopaediabritannica2021,
+  title = {Time {{Trial}}},
+  author = {{The Editors of Encyclopaedia Britannica}},
+  date = {2021},
+  url = {https://www.britannica.com/sports/time-trial},
+  urldate = {2022-02-20},
+  abstract = {time trial, (``race against the watch''), in bicycle racing, a form of competition in which individual cyclists or teams are sent out at intervals to cover a specified distance on a road course. The contestant with the fastest time for the distance wins. The individual time trial is distinctive in t},
+  langid = {english},
+  organization = {{Encyclopaedia Britannica}},
+  keywords = {cited},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\S9XQEGLU\\time-trial.html}
+}
+% == BibLateX quality report for theeditorsofencyclopaediabritannica2021:
+% ? Title looks like it was stored in title-case in Zotero
+
 @online{unioncyclisteinternationale,
   title = {Technical {{Regulations}} for {{Bicycles}}: {{A Practical Guide}} to {{Implementation}}},
   author = {{Union Cycliste Internationale}},
@@ -1522,17 +1537,6 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for zotero-1250:
 % Exactly one of 'date' / 'year' must be present
 % ? Title looks like it was stored in title-case in Zotero
-
-@online{zotero-1251,
-  title = {Time Trial | Cycling | {{Britannica}}},
-  url = {https://www.britannica.com/sports/time-trial},
-  urldate = {2022-02-20},
-  abstract = {time trial, (``race against the watch''), in bicycle racing, a form of competition in which individual cyclists or teams are sent out at intervals to cover a specified distance on a road course. The contestant with the fastest time for the distance wins. The individual time trial is distinctive in t},
-  langid = {english},
-  file = {C\:\\Users\\madie\\Zotero\\storage\\S9XQEGLU\\time-trial.html}
-}
-% == BibLateX quality report for zotero-1251:
-% Exactly one of 'date' / 'year' must be present
 
 @online{zotero-1267,
   title = {How Does Your Cycling Power Output Compare?},
